# Solaris

./: .gitattributes  Cargo.toml  Makefile  install.sh  setup.sh
.github/ISSUE_TEMPLATE/: execução-de-binário.md
.github/workflows/: rust.yml
src/: main.rs
src/modules/: clap.rs  config.rs  mod.rs  pid_verifier.rs  rules.rs  watcher.rs
