[package]
name = "solaris"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
nix = { version = "0.31.3", features = ["signal"]}
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
